# binpicking

./: .gitignore  CMakeLists.txt  GUI.py  main.cpp  pipeline.py  prepare_env.sh  tcp_server.py
calib/: extrinsics.mfa  intrinsics.mfa
